@@ -1,6 +1,6 @@
 #
-# Copyright (C) 2024 Linux Studio Plugins Project <https://lsp-plug.in/>
-#           (C) 2024 Vladimir Sadovnikov <sadko4u@gmail.com>
+# Copyright (C) 2025 Linux Studio Plugins Project <https://lsp-plug.in/>
+#           (C) 2025 Vladimir Sadovnikov <sadko4u@gmail.com>
 #
 # This file is part of lsp-plugins
 #
@@ -380,20 +380,24 @@ LIBCAIRO_VERSION           := system
 LIBCAIRO_NAME              := cairo
 LIBCAIRO_TYPE              := pkg
 
-LIBDL_VERSION              := system
-LIBDL_NAME                 := libdl
-LIBDL_TYPE                 := opt
-LIBDL_LDFLAGS              := -ldl
-
 LIBD2D1_VERSION            := system
 LIBD2D1_NAME               := libd2d1
 LIBD2D1_TYPE               := opt
 LIBD2D1_LDFLAGS            := -ld2d1
 
+LIBDL_VERSION              := system
+LIBDL_NAME                 := libdl
+LIBDL_TYPE                 := opt
+LIBDL_LDFLAGS              := -ldl
+
 LIBDWRITE_VERSION          := system
 LIBDWRITE_NAME             := libdwrite
 LIBDWRITE_TYPE             := opt
 LIBDWRITE_LDFLAGS          := -ldwrite
+
+LIBFONTCONFIG_VERSION      := system
+LIBFONTCONFIG_NAME         := fontconfig
+LIBFONTCONFIG_TYPE         := pkg
 
 LIBFREETYPE_VERSION        := system
 LIBFREETYPE_NAME           := freetype2
@@ -417,14 +421,14 @@ LIBICONV_NAME              := libiconv
 LIBICONV_TYPE              := opt
 LIBICONV_LDFLAGS           := -liconv
 
+LIBJACK_VERSION            := system
+LIBJACK_NAME               := jack
+LIBJACK_TYPE               := pkg
+
 LIBMPR_VERSION             := system
 LIBMPR_NAME                := libmpr
 LIBMPR_TYPE                := opt
 LIBMPR_LDFLAGS             := -lmpr
-
-LIBJACK_VERSION            := system
-LIBJACK_NAME               := jack
-LIBJACK_TYPE               := pkg
 
 LIBMSACM_VERSION           := system
 LIBMSACM_NAME              := libmsacm
@@ -437,7 +441,7 @@ LIBOLE_TYPE                := opt
 LIBOLE_LDFLAGS             := -lole32
 
 LIBOPENGL32_VERSION        := system
-LIBOPENGL32_NAME           := libole
+LIBOPENGL32_NAME           := libopengl32
 LIBOPENGL32_TYPE           := opt
 LIBOPENGL32_LDFLAGS        := -lopengl32
 
@@ -482,5 +486,3 @@ LIBX11_TYPE                := pkg
 LIBXRANDR_VERSION          := system
 LIBXRANDR_NAME             := xrandr
 LIBXRANDR_TYPE             := pkg
-
-
